--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <section class="idea">
             <h2>Idea Presentation</h2>
             <div class="ppt-container">
-                <iframe src="idea.pdf" allowfullscreen></iframe>
+                <iframe src="sih-idea.pdf" allowfullscreen></iframe>
             </div>
         </section>
     </main>
